<resources>
    <string name="app_name">MySportLife</string>
    <string name="news">Здоровье</string>
    <string name="diary">Дневник питания</string>
    <string name="add_note">Добавить заметку</string>
    <string name="favorites">Избранное</string>
    <string name="recipes">Спорт</string>
    <string name="map">Карта магазинов</string>
    <string name="save_note">Сохранить заметку</string>
    <string name="gram">Граммовка:</string>
    <string name="kilo">Килокалории на 100 г:</string>
    <string name="carbon">Углеводы на 100 г:</string>
    <string name="fat">Жиры на 100 г:</string>
    <string name="protein">Белки на 100 г:</string>
    <string name="name_food">Название:</string>
    <string name="dots">...</string>
    <string name="test_title_news">Профессор назвал самую полезную кашу</string>
    <string name="test_small_text_news">Профессор кафедры терапии медицинского факультета Государственного университета просвещения кардиолог Грант Шехян 9 февраля рассказал «Известиям» о пользе каш.</string>
    <string name="test_big_text_news">Профессор кафедры терапии медицинского факультета Государственного университета просвещения кардиолог Грант Шехян 9 февраля рассказал «Известиям» о пользе каш.

По его словам, во всех крупах есть полезные для организма, в том числе и для сердечно-сосудистой системы, вещества: минералы и микроэлементы, которые растения впитали из почвы.

«На мой взгляд, одной из самых полезных каш можно назвать овсянку. Благодаря сбалансированному составу она легко усваивается, а имеющаяся в составе клетчатка помогает кишечнику активнее работать. Хороши пшенная крупа, легкоусвояемая благодаря балансу белков и углеводов, гречка, которая известна высоким содержанием железа. Эти каши часто входят в меню отделений кардиологии. Но польза каш — величина непостоянная. Многие стараются улучшить их вкус, добавляя сливочное масло, пережаренные овощи или жирное мясо. С такими добавками каши однозначно перестают быть диетическими и даже могут навредить», — сказал он.При этом правильно приготовленная каша может стать действенным средством от холестериновых бляшек. Каши без масла способствуют очищению сосудов и сокращению риска развития заболеваний сосудов и сердца, сообщил профессор.

«Всем, кто серьезно относится к своему здоровью, стоит употреблять как можно меньше соли, а в идеале — вовсе от нее отказаться. В крупе в достаточном количестве содержатся натрий и хлор — основные элементы привычной нам поваренной соли. Досаливая, мы провоцируем задержку жидкости в организме и повышаем риск развития гипертонии. Первое время блюда будут казаться пресными, но со временем это пройдет. Для вкуса в кашу можно добавить натуральные специи, например ароматную зелень, кунжут. Если очень хочется масла, можно добавить немного растительного. Но нужно помнить, пользы в этом мало», — сказал Шехян.

Еще один метод приготовления каш, при котором сохраняется максимум их полезных свойств, — заваривание или запаривание, отметил эксперт. Например, гречневую крупу на несколько часов (лучше на ночь) заливают кипятком или кефиром.

«Этот способ ближе к тому, что в нас заложено природой. Дело в том, что при воздействии температуры разрушаются некоторые полезные вещества. Белки, например, денатурируют, то есть изменяется их природная форма. При заваривании этого не происходит, продукт получается полезнее», — заключил собеседник издания.О вреде манной каши в августе 2023-го рассказывала врач-диетолог Елена Соломатина. Она отмечала, что манка обладает высоким гликемическим индексом, способствует набору лишнего веса и развитию сахарного диабета. По ее словам, раньше манная каша ценилась за высокую калорийность, однако сейчас уровень физической активности снизился, поэтому на первый план вышло увеличение количества питательных веществ в рационе.</string>
    <string name="porridge">Овсяная каша</string>
    <string name="back">Назад</string>
    <string name="test_title_recipes">Куриная грудка, фаршированная помидорами и сыром</string>
    <string name="test_small_text_recipes">Делаем надрезы на курином филе, укладываем в них сыр и помидоры. Запекаем куриное филе в духовке. Получается очень вкусное мясное блюдо.</string>
    <string name="ingredients">Ингредиенты</string>
    <string name="manyIngredients">Куриное филе - 2 шт. (500 г)

    Моцарелла – 130 г (1 шар)

    Помидор – 1 шт. (средний)

    Базилик – 8-12 листьев

    Оливковое масло – 2 ст.л.

    Смесь итальянских трав – 1 ч.л.

    Соль – по вкусу

    Молотый черный перец – по вкусу
    </string>
    <string name="process">Процесс приготовления</string>
    <string name="test_big_text_recipes">Для приготовления куриной грудки с помидорами и сыром вам понадобятся такие ингредиенты.</string>
    <string name="test_date">10.02.2024</string>
    <string name="rice">Рис</string>
    <string name="b">б</string>
    <string name="zh">ж</string>
    <string name="u">у</string>
    <string name="kkal">ккал</string>
    <string name="g">г</string>
    <string name="edit">Редактировать</string>
    <string name="del">Удалить</string>
    <string name="result">Итого</string>


</resources>