<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/titlePage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/stroke"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/back"
            android:src="@mipmap/back"
            android:onClick="goBack"/>

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:fontFamily="@font/inter_extralight"
            android:text="@string/news"
            android:textSize="30sp"
            android:textStyle="italic" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="6dp"
        app:layout_constraintBottom_toTopOf="@+id/controlPanel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titlePage">

        <LinearLayout
            android:id="@+id/miniNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="7dp"
            android:layout_marginTop="7dp"
            android:paddingBottom="40dp"
            android:background="@drawable/stroke_corners"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titlePage">

            <TextView
                android:id="@+id/titleMiniNews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="7dp"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/test_title_news"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/porridge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="0dp"
                android:layout_marginVertical="7dp"
                android:src="@mipmap/porridge"
                android:scaleType="centerCrop"
                android:contentDescription="@string/porridge"/>

            <TextView
                android:id="@+id/textMiniNews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/test_big_text_news"
                android:textSize="26sp" />

        </LinearLayout>
    </ScrollView>

    <include layout="@layout/control_panel"/>
</androidx.constraintlayout.widget.ConstraintLayout>